[metadata]
name = zutil
description = "Python utilities for zCFD users"
author = "Zenotech"
author_email = "support@zenotech.com"
Home-page = https://github.com/zCFD/zutil
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: POSIX :: Linux

[options]
packages = find:
include_package_data = True
install_requires =
    futur
    ipytho
    fabric>=2.5
    ipywidget
    matplotli
    nump
    panda
    PyYAM
    dil

[options.extras_require]
mpi = mpi4py
