[metadata]
name = zutil
description = "Python utilities for zCFD users"
author = "Zenotech"
author_email = "support@zenotech.com"
Home-page = https://github.com/zCFD/zutil
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Operating System :: POSIX :: Linux

[options]
packages = find:
include_package_data = True
install_requires =
    future
    ipython
    fabric>=2.5
    ipywidgets
    matplotlib<3.10
    numpy
    pandas
    PyYAML
    dill
    ipympl
    jupyterlab
    jupyterlab-widgets
    tqdm
    pytransform3d
    ipykernel

[options.extras_require]
mpi = mpi4py
